@@ -33,8 +33,7 @@ Visit_Environment (const PICML::Environment & env)
   MultiInput_Set inputs = env.dstMultiInput ();
 
   CUTS_BE::visit <CONTEXT> (inputs,
-    boost::bind (&MultiInput_Set::value_type::Accept,
-    _1, boost::ref (*this)));
+    boost::bind (&MultiInput_Set::value_type::Accept, _1, boost::ref (*this)));
 }
 
 //
@@ -57,15 +56,12 @@ template <typename CONTEXT>
 void CUTS_BE_Env_Visitor_T <CONTEXT>::
 Visit_MultiInputAction (const PICML::MultiInputAction & action)
 {
-  CUTS_BE_Environment_Method_Begin_T <CONTEXT> env_method_begin_gen (this->context_);
+  CUTS_BE_Environment_Method_Begin_T <architecture_type> env_method_begin_gen (this->context_);
   env_method_begin_gen.generate (action);
 
-  CUTS_BE_Execution_Visitor_T <CONTEXT> exec_visitor (this->context_);
-  PICML::MultiInputAction mia (action);
+  CUTS_BE_Execution_Visitor_T <behavior_type> exec_visitor (this->context_);
+  PICML::MultiInputAction (action).Accept (exec_visitor);
 
-  CUTS_BE::visit <CONTEXT> (mia,
-    boost::bind (&PICML::MultiInputAction::Accept, _1, boost::ref (exec_visitor)));
-
-  CUTS_BE_Environment_Method_End_T <CONTEXT> env_method_end_gen (this->context_);
+  CUTS_BE_Environment_Method_End_T <architecture_type> env_method_end_gen (this->context_);
   env_method_end_gen.generate (action);
 }
